feat: task 20 refactor: refactoring